importancevafqmc/err/submit.sh_7488072.err

The following have been reloaded with a version change:
  1) Mambaforge/23.3.1-fasrc01 => Mambaforge/22.11.1-fasrc01
  2) python/3.10.12-fasrc01 => python/3.10.9-fasrc01

Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/pes.py", line 6, in <module>
    from hmc_vafqmc_adams import Propagator
  File "/n/home06/mbritt/VAFQMC/importancevafqmc/hmc_vafqmc_adams.py", line 35
    from afqmc.sys.path.append(os.path.abspath("../"))
                              ^
SyntaxError: invalid syntax
